--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 
 services:
   db:
+    container_name: api-solid-db
     image: postgres:16
     ports:
       - '5435:5432'
@@ -24,7 +25,7 @@ services:
       - db
     build: .
     ports:
-      - '3333'
+      - '3333:3333'
     networks:
       - api-tier
     volumes:
