--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node dist/server.js",
-    "build": "tsup src --out-dir dist"
+    "build": "tsup src --out-dir dist",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "20.9.0",
     "eslint": "8.53.0",
     "prisma": "5.6.0",
     "tsup": "7.2.0",
     "tsx": "4.1.2",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.6"
   },
   "dependencies": {
     "@prisma/client": "5.6.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.13.0",
     "zod": "3.22.4"
