chore: config jwt

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 NODE_ENV=development
+
+DATABASE_URL="postgresql://my_user:password123@localhost:5435/apisolid?schema=public"
+
+# Auth
+JWT_SECRET=jwt-secret-key
