--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node dist/server.js",
     "build": "tsup src --out-dir dist",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http"
   },
   "author": "",
   "license": "ISC",
@@ -35,6 +39,7 @@
     "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "fastify": "4.13.0",
+    "npm-run-all": "4.1.5",
     "zod": "3.22.4"
   }
 }
