--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.9.0",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "0.34.6",
     "@vitest/ui": "0.34.6",
     "eslint": "8.53.0",
@@ -40,6 +41,7 @@
     "dotenv": "16.3.1",
     "fastify": "4.13.0",
     "npm-run-all": "4.1.5",
+    "supertest": "6.3.3",
     "zod": "3.22.4"
   }
 }
